--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "intervention/image-laravel": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/reverb": "@beta",
+        "laravel/sanctum": "^4.0",
         "laravel/scout": "^10.11",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
