--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-pdo_mysql": "*",
         "babenkoivan/elastic-scout-driver": "^4.0",
         "barryvdh/laravel-dompdf": "^3.0",
         "calcinai/php-imagick": "^0.1.2",
