Prepare for deployment

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "start": "laravel-echo-server start",
+        "work": "php artisan queue:work"
     },
     "devDependencies": {
         "axios": "^1.6.4",
