Prepare for deployment

--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "start": "laravel-echo-server start",
-        "work": "php artisan queue:work"
+        "build": "vite build"
     },
     "devDependencies": {
         "axios": "^1.6.4",
