--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "8.2.27",
+        "ext-imagick": "*",
         "ext-pdo_mysql": "*",
         "babenkoivan/elastic-scout-driver": "^4.0",
         "barryvdh/laravel-dompdf": "^3.0",
