--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "8.2.28",
+        "php": "*",
         "ext-imagick": "*",
         "ext-pdo_mysql": "*",
         "babenkoivan/elastic-scout-driver": "^4.0",
